css/index.css
body,
html {
    font-family: sans-serif;
    height: 100%;
    margin: 0;
    padding: 0;
    background-image: linear-gradient(180deg, white 0%, gray 100%);
}

p {
    font-size: 18px;
    color: #414040;
}

.instructions {
    color: #444444;
    text-transform: uppercase;
    letter-spacing: 4px;
    font-size: 16px;
    margin-top: 40px;
    margin-bottom: -10px;
    text-align: center;
}

.magic-text {
    background: linear-gradient(to right, #6b8cce 20%, #0c3483 40%, #0c3483 60%, #6b8cce 80%);
    background-size: 200% auto;
    color: #000;
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    animation: shine 2s linear infinite;
}

.center {
    margin: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    padding-bottom: 10rem;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
}

.ball-container {
    width: 100%;
    height: 100%;
    display: block;
    margin: 0 auto;
    position: relative;
}

.ball-container:after {
    content: '';
    display: block;
    position: absolute;
    left: calc(50% - 130px);
    width: 100%;
    max-width: 260px;
    height: 10px;
    background: transparent;
    border-radius: 50%;
    box-shadow: 0 60px 20px rgba(0, 0, 0, 0.4);
    z-index: -1;
    animation: shadow 2s ease infinite;
    opacity: 1;
    transition: ease-in all 0.2s;
}

.ball-container.no-shadow:after {
    opacity: 0;
    transition: ease-in all 0.2s;
}

.magic-ball {
    height: 300px;
    width: 300px;
    margin: 40px auto 40px;
    background: #1a1a1a;
    /*background: linear-gradient(135deg, #cde29f 0%, #1b9483 100%);
      background-image: linear-gradient(to top, #505285 0%, #585e92 12%, #65689f 25%, #7474b0 37%, #7e7ebb 50%, #8389c7 62%, #9795d4 75%, #a2a1dc 87%, #b5aee4 100%);
      background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
      background-image: linear-gradient(to top, #09203f 0%, #537895 100%);*/
    background-image: linear-gradient(to top, #1a1a1a 0%, #575757 100%, #3a3a3a 100%, #575757 100%);
    text-align: center;
    color: #fff;
    position: relative;
    border: none;
    border-radius: 50%;
    box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.05), inset 0px -35px 3px rgba(255, 255, 255, 0.05);
    animation: floating 2s infinite;
}

.eight {
    font-size: 64px;
    color: black;
    position: relative;
    font-weight: bold;
    top: 50%;
    transform: translateY(-50%);
    background: white;
    border-radius: 50%;
    height: 130px;
    width: 130px;
    margin: 0 auto;
    opacity: 1;
    transition: ease-in all 0.2s;
}

span.eight-contents {
    padding: 30px;
    display: block;
}

.triangle {
    -webkit-transform: translate(-50%, -50%) rotate(5deg);
    transform: translate(-50%, -50%) rotate(5deg);
    width: 0;
    height: 0;
    border-left: 60px solid transparent;
    border-right: 60px solid transparent;
    border-top: 120px solid rgb(28, 26, 153);
    margin-bottom: 25px;
    opacity: 0;
    transition: ease-in all 0.1s;
    position: relative;
    top: 60%;
    left: 50%;
    background-image: radial-gradient(circle 248px at center, #9fe2e0 20%, #1b9483 35%, #1b9483 100%);
    /*animation: hue 10s infinite;*/
}


.response {
    opacity: 0;
    color: white;
    text-shadow: 0px 1px 5px rgba(255, 255, 255, 0.05);
    text-transform: uppercase;
    font-weight: bold;
    font-size: 12px;
    position: relative;
    -webkit-transform: translate(-50%, -50%) rotate(5deg);
    transform: translate(-50%, -50%) rotate(5deg);
    transition: ease-in all 0.2s;
    width: 90px;
    height: 100px;
    left: 50%;
    text-align: center;
    top: -40px;
}

.magic-ball:hover {
    cursor: move;
    cursor: grab;
    cursor: -moz-grab;
    cursor: -webkit-grab;
}

.magic-ball:active {
    cursor: move;
    cursor: grabbing;
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing;
}

.triangle.active {
    /* border-top: 130px solid rgba(60,10,120,0.9); */
    -webkit-transform: translate(-50%, -50%) rotate(0deg);
    transform: translate(-50%, -50%) rotate(0deg);
    opacity: 1;
    transition: ease-in all 0.2s;
}

.response.active {
    opacity: 1;
    transition: ease-in all 0.2s;
    -webkit-transform: translate(-50%, -50%) rotate(0deg);
    transform: translate(-50%, -50%) rotate(0deg);
}

.eye {
    box-shadow: 0 0px 30px 0px rgba(99, 99, 99, 0.5);
    width: 150px;
    height: 150px;
    margin: 0 auto;
    top: 50%;
    position: relative;
    transform: translateY(calc(-50% - 130px));
    border: 5px solid rgba(24, 24, 24, 0.5);
    border-radius: 50%;
    overflow: hidden;

}

.eye.glow {
    animation: glow 2s ease infinite;
}

.rim {
    box-shadow: 0 0 0px 0 rgb(255, 255, 255);
    width: 300px;
    height: 300px;
    margin: 0 auto;
    border-radius: 50%;
}

.rim.pulse {
    animation: pulse .5s 2;
}


/* Animations */
@keyframes shine {
    to {
        background-position: 200% center;
    }
}

@-webkit-keyframes shine {
    to {
        background-position: 200% center;
    }
}

@keyframes floating {
    from {
        transform: translate(0, 0px);
    }

    60% {
        transform: translate(0, 12px);
    }

    to {
        transform: translate(0, -0px);
    }
}

@-webkit-keyframes floating {
    from {
        -webkit-transform: translate(0, 0px);
    }

    60% {
        -webkit-transform: translate(0, 12px);
    }

    to {
        -webkit-transform: translate(0, -0px);
    }
}

@keyframes shadow {
    from {
        transform: scaleX(.85);
    }

    60% {
        transform: scaleX(1);
    }

    to {
        transform: scaleX(.85);
    }
}

@-webkit-keyframes shadow {
    from {
        transform: scaleX(.85);
    }

    60% {
        transform: scaleX(1);
    }

    to {
        transform: scaleX(.85);
    }
}

@keyframes pulse {
    0% {}

    70% {
        box-shadow: 0 0 0 100px rgba(27, 148, 131, 0);
    }

    100% {
        box-shadow: 0 0 0 0 rgba(27, 148, 131, 0);
    }
}

@-webkit-keyframes pulse {
    0% {}

    70% {
        box-shadow: 0 0 0 100px rgba(27, 148, 131, 0);
    }

    100% {
        box-shadow: 0 0 0 0 rgbargba(27, 148, 131, 0);
    }
}

@keyframes glow {
    50% {
        box-shadow: 0 0px 40px 3px rgba(159, 226, 224, 1);
    }

    100% {
        box-shadow: 0 0px 30px 0px rgba(159, 226, 224, .3);
    }
}

@-webkit-keyframes glow {
    50% {
        box-shadow: 0 0px 40px 3px rgba(159, 226, 224, 1);
    }

    100% {
        box-shadow: 0 0px 30px 0px rgba(159, 226, 224, .3);
    }
}


/* Media Queries */
@media screen and (max-width: 600px) {
    .ball-container {
        transform: scale(.75);
    }

    .magic-ball {
        margin-top: 0;
    }
}

